actulizacion servicecontroller sylistcontroller y las apis

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=bookingservice
 APP_ENV=local
-APP_KEY=base64:ukIqbmUBslQWJ3WWo8PehLR/65/rUyW35ad2C44zuNg=
+APP_KEY=base64:RpoJLT7RAVTJ/O3cc9PJfqvonKSO/+IWXJs+ThpwrJQ=
 APP_DEBUG=true
-APP_URL=http://34.171.207.241
+APP_URL=http://143.198.230.15/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -13,7 +13,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=bookingservice
 DB_USERNAME=root
-DB_PASSWORD=Diego123
+DB_PASSWORD=DiegoRojas2109$
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
